[package]
name = "expense-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

axum = "0.7.7"
tower-http = { version = "0.6", features = ["fs"] }
tower-cookies = "0.10"
chrono = { version = "0.4", features = ["serde"] }
lazy-regex = "3.3"
async-trait = "0.1"
strum-macros = "0.26"
uuid = { version = "1", features = ["v4", "fast-rng",] }

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"